--- a/pages/day18.html
+++ b/pages/day18.html
@@ -1,18 +1,288 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Día 18</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <script src="../js/main.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Día 18</h1>
+      <h1>Día 18</h1>
     </header>
+
     <main>
-        <p>El contenido para el día 18 se añadirá más adelante.</p>
+      <section>
+        <h2>Nota importante</h2>
+        <p>
+          Durante la parte circular de la rutina,
+          <strong>no te tumbes en el suelo para descansar</strong>. Descansa de
+          pie o caminando suave: así mantienes el pulso y el cuerpo “en
+          trabajo”, sin que el sistema se “apague”.
+        </p>
+      </section>
+
+      <!-- 1. Flexiones profundas y lentas -->
+      <section>
+        <h2>1. Flexiones profundas y lentas</h2>
+        <img
+          src="../img/day18/1.1.jpg"
+          alt="Flexiones profundas sobre kettlebells"
+        />
+        <p>
+          Realiza <strong>3 series de 10</strong> flexiones con las manos
+          elevadas sobre dos kettlebells o pilas de libros. Baja en
+          <strong>4 segundos</strong> y sube en <strong>1 segundo</strong>. Si
+          es muy difícil, haz flexiones normales o con las rodillas apoyadas,
+          manteniendo el cuerpo en línea recta.
+        </p>
+      </section>
+
+      <!-- 2. Elevación parcial del abdomen -->
+      <section>
+        <h2>2. Elevación parcial del abdomen</h2>
+        <img src="../img/day18/2.1.jpg" alt="Abdomen elevado" />
+        <img src="../img/day18/2.2.jpg" alt="Abdomen abajo" />
+        <p>
+          Acostado boca arriba con rodillas flexionadas, eleva el torso sin
+          incorporarte por completo, solo lo necesario para tocar las rodillas
+          con las manos. Haz <strong>3 series de 10</strong> con movimiento
+          controlado, exhalando al subir e inhalando al bajar.
+        </p>
+      </section>
+
+      <!-- 3. Sentadillas profundas con codos a las rodillas -->
+      <section>
+        <h2>3. Sentadillas profundas con codos a las rodillas</h2>
+        <img src="../img/day18/3.1.jpg" alt="Sentadilla profunda" />
+        <p>
+          Coloca los pies al ancho de hombros con el peso en los talones. Baja a
+          una sentadilla profunda, llevando los codos hacia las rodillas para
+          mantener la postura. Realiza <strong>10 repeticiones</strong>,
+          manteniendo el pecho abierto y la espalda recta.
+        </p>
+      </section>
+
+      <!-- 4. Saltos en posición de plancha -->
+      <section>
+        <h2>4. Saltos en posición de plancha</h2>
+        <img src="../img/day18/4.1.jpg" alt="Plancha antes del salto" />
+        <img src="../img/day18/4.2.jpg" alt="Salto hacia adelante en plancha" />
+        <p>
+          Desde la posición de plancha, salta llevando los pies hacia adelante y
+          luego vuelve a la plancha con otro salto. Mantén el abdomen firme y la
+          cadera estable. Haz <strong>10 repeticiones</strong> rápidas pero
+          controladas.
+        </p>
+      </section>
+
+      <!-- 5. Burpee sin flexión -->
+      <section>
+        <h2>5. Burpee sin flexión</h2>
+        <img src="../img/day18/5.1.jpg" alt="Posición baja del burpee" />
+        <img src="../img/day18/5.2.jpg" alt="Transición del burpee" />
+        <img src="../img/day18/5.3.jpg" alt="Salto vertical del burpee" />
+        <p>
+          Desde la plancha, salta con los pies hacia adelante y luego realiza un
+          salto vertical con los brazos abajo. No hay flexión de brazos.
+          Completa <strong>2 series de 10</strong> manteniendo un ritmo fluido y
+          el cuerpo compacto.
+        </p>
+      </section>
+
+      <!-- 6. Saltos estrella desde sentadilla -->
+      <section>
+        <h2>6. Saltos estrella desde sentadilla</h2>
+        <img
+          src="../img/day18/6.1.jpg"
+          alt="Posición de sentadilla antes del salto estrella"
+        />
+        <img src="../img/day18/6.2.jpg" alt="Salto estrella en el aire" />
+        <p>
+          Comienza en sentadilla completa con las manos cerca del suelo. Desde
+          ahí, explota hacia arriba abriendo brazos y piernas en forma de
+          estrella. Aterriza suave, vuelve a la sentadilla y repite
+          <strong>10 veces</strong> sin pausas.
+        </p>
+      </section>
+
+      <!-- 7.1 Flexiones (repetición) -->
+      <section>
+        <h2>7.1. Flexiones</h2>
+        <img
+          src="../img/day18/7.1.jpg"
+          alt="Flexiones en posición de plancha con manos apoyadas"
+        />
+        <p>
+          Repite el ejercicio de flexiones. En este bloque se hacen
+          <strong>2 series de 10</strong>.
+        </p>
+      </section>
+
+      <!-- 8. Elevación parcial del abdomen (repetición) -->
+      <section>
+        <h2>8. Elevación parcial del abdomen</h2>
+        <img src="../img/day18/8.1.jpg" alt="Abdomen elevado (repetición)" />
+        <img src="../img/day18/8.2.jpg" alt="Abdomen abajo (repetición)" />
+        <p>
+          Repite el ejercicio de abdomen. En este bloque se hacen
+          <strong>2 series de 10</strong>.
+        </p>
+      </section>
+
+      <!-- 9. Sentadillas -->
+      <section>
+        <h2>9. Sentadillas profundas con codos a las rodillas</h2>
+        <img
+          src="../img/day18/9.1.jpg"
+          alt="Sentadilla profunda (serie corta)"
+        />
+        <p>
+          Repite las sentadillas. En este bloque se hacen
+          <strong>5 repeticiones</strong>.
+        </p>
+      </section>
+
+      <!-- 10. Saltos en plancha -->
+      <section>
+        <h2>10. Saltos en posición de plancha</h2>
+        <img
+          src="../img/day18/10.1.jpg"
+          alt="Plancha antes del salto (serie corta)"
+        />
+        <img
+          src="../img/day18/10.2.jpg"
+          alt="Salto hacia adelante en plancha (serie corta)"
+        />
+        <p>
+          Repite los saltos en plancha. En este bloque se hacen
+          <strong>5 repeticiones</strong>.
+        </p>
+      </section>
+
+      <!-- 11. Burpee sin flexión (opción de volumen) -->
+      <section>
+        <h2>11. Burpee sin flexión</h2>
+        <img src="../img/day18/11.1.jpg" alt="Inicio del burpee sin flexión" />
+        <img
+          src="../img/day18/11.2.jpg"
+          alt="Posición baja del burpee sin flexión"
+        />
+        <img
+          src="../img/day18/11.3.jpg"
+          alt="Salto vertical del burpee sin flexión"
+        />
+        <p>
+          Repite el burpee sin flexión. Puedes hacer
+          <strong>2 series de 5</strong> o <strong>1 serie de 10</strong>.
+        </p>
+      </section>
+
+      <!-- 12. Saltos estrella -->
+      <section>
+        <h2>12. Saltos estrella desde sentadilla</h2>
+        <img
+          src="../img/day18/12.1.jpg"
+          alt="Sentadilla antes del salto estrella (serie corta)"
+        />
+        <img src="../img/day18/12.2.jpg" alt="Salto estrella (serie corta)" />
+        <p>
+          Repite los saltos estrella. En este bloque se hace
+          <strong>1 serie de 5</strong>.
+        </p>
+      </section>
+
+      <!-- 13. Subidas al banco -->
+      <section>
+        <h2>13. Subidas al banco</h2>
+        <img src="../img/day18/13.1.jpg" alt="Subida al banco con una pierna" />
+        <p>
+          Apoya un pie en un banco o taburete y empuja con esa pierna para subir
+          el cuerpo, elevando la otra rodilla. Baja con control y cambia de
+          pierna. Realiza <strong>5 repeticiones por pierna</strong> manteniendo
+          el torso recto.
+        </p>
+      </section>
+
+      <!-- 14. Abdomen -->
+      <section>
+        <h2>14. Elevación parcial del abdomen</h2>
+        <img src="../img/day18/14.1.jpg" alt="Abdomen elevado (bloque final)" />
+        <img src="../img/day18/14.2.jpg" alt="Abdomen abajo (bloque final)" />
+        <p>
+          Repite el ejercicio de abdomen. En este bloque se hace
+          <strong>1 serie de 10</strong>.
+        </p>
+      </section>
+
+      <!-- 15. Sentadillas (opción de volumen) -->
+      <section>
+        <h2>15. Sentadillas profundas con codos a las rodillas</h2>
+        <img
+          src="../img/day18/15.1.jpg"
+          alt="Sentadilla profunda (opción de volumen)"
+        />
+        <p>
+          Repite las sentadillas. Puedes hacer <strong>2 series de 5</strong> o
+          <strong>1 serie de 10</strong>.
+        </p>
+      </section>
+
+      <!-- 16. Saltos en plancha (opción de volumen) -->
+      <section>
+        <h2>16. Saltos en posición de plancha</h2>
+        <img
+          src="../img/day18/16.1.jpg"
+          alt="Plancha antes del salto (opción de volumen)"
+        />
+        <img
+          src="../img/day18/16.2.jpg"
+          alt="Salto hacia adelante en plancha (opción de volumen)"
+        />
+        <p>
+          Repite los saltos en plancha. Puedes hacer
+          <strong>2 series de 5</strong> o <strong>1 serie de 10</strong>.
+        </p>
+      </section>
+
+      <!-- 17. Burpee sin flexión -->
+      <section>
+        <h2>17. Burpee sin flexión</h2>
+        <img
+          src="../img/day18/17.1.jpg"
+          alt="Inicio del burpee sin flexión (serie corta)"
+        />
+        <img
+          src="../img/day18/17.2.jpg"
+          alt="Transición del burpee sin flexión (serie corta)"
+        />
+        <img
+          src="../img/day18/17.3.jpg"
+          alt="Salto vertical del burpee sin flexión (serie corta)"
+        />
+        <p>
+          Repite el burpee sin flexión. En este bloque se hacen
+          <strong>5 repeticiones</strong>.
+        </p>
+      </section>
+
+      <!-- 18. Saltos estrella -->
+      <section>
+        <h2>18. Saltos estrella desde sentadilla</h2>
+        <img
+          src="../img/day18/18.1.jpg"
+          alt="Sentadilla antes del salto estrella (2x10)"
+        />
+        <img
+          src="../img/day18/18.2.jpg"
+          alt="Salto estrella en el aire (2x10)"
+        />
+        <p>
+          Repite los saltos estrella. En este bloque se hacen
+          <strong>2 series de 10</strong>.
+        </p>
+      </section>
     </main>
-</body>
+  </body>
 </html>
